<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BerandaFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/selamatMalam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/selamat_malam_nama"
        style="@style/CustomTextViewRegular"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/logoBank"
        android:layout_width="180dp"
        android:layout_height="126dp"
        android:src="@drawable/bank"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@+id/selamatMalam"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/saldo"
        style="@style/CustomTextViewQualitionBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoBank" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSaldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/saldo"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Nama pengguna dan ikon copy -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KHAIRUNNISA"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    style="@style/CustomTextViewRegular"/>

                <ImageView
                    android:id="@+id/ivCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/copy"
                    android:paddingStart="100dp"
                    android:contentDescription="Copy icon"/>

            </LinearLayout>

            <!-- Informasi rekening -->
            <TextView
                android:id="@+id/tvAccountInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewQualition"
                android:text="BNI Taplus Muda | 7263-2938-2390-****"
                android:textSize="14sp"
                android:layout_marginTop="4dp"/>

            <!-- Saldo dan ikon visibility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp ********"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <ImageView
                    android:id="@+id/ivVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility"
                    android:contentDescription="Visibility icon"
                    android:paddingStart="50dp"/>
            </LinearLayout>

            <!-- Tombol Tarik Tunai dan Setor Tunai -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                >

                <Button
                    android:id="@+id/btnTarikTunai"
                    style="@style/CustomTextViewQualition"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:text="Tarik Tunai" />

                <Button
                    android:id="@+id/btnSetorTunai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Setor Tunai"
                    style="@style/CustomTextViewQualition"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/orange"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/shortcutKamu"
        style="@style/CustomTextViewQualitionBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/shortcut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardSaldo" />

<!--    Shortcuts-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.cardview.widget.CardView

        android:id="@+id/shortcutTransfer"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/transfer" />

            <TextView
                android:id="@+id/textTransfer"
                style="@style/CustomTextViewQualition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/transfer" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pulsaTransfer"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pulsa" />

            <TextView
                style="@style/CustomTextViewQualition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pulsa" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/virtualAcc"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/virtual" />

            <TextView
                style="@style/CustomTextViewQualition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/virtual" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/menu"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/menu" />

            <TextView
                style="@style/CustomTextViewQualition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/menu" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--    insight-->
    <TextView
        android:id="@+id/insight"
        style="@style/CustomTextViewQualitionBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/insight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h3" />

    <HorizontalScrollView
        app:layout_constraintTop_toBottomOf="@+id/insight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!-- Item 1 -->
            <ImageView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:src="@drawable/gambar1"
                android:contentDescription="Image 1"
                android:layout_marginEnd="16dp"/>

            <!-- Item 2 -->
            <ImageView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:src="@drawable/gambar2"
                android:contentDescription="Image 2"
                android:layout_marginEnd="16dp"/>

            <!-- Item 3 -->
            <ImageView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:src="@drawable/image3"
                android:contentDescription="Image 3"
                />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

